django.log
nohup: ignoring input
Watching for file changes with StatReloader
/var/www/djangoapps/tabletap/t1/tabletap/settings.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
May 16, 2025 - 04:21:04
Django version 5.2.1, using settings 'tabletap.settings'
Starting development server at http://0.0.0.0:8000/
Quit the server with CONTROL-C.

WARNING: This is a development server. Do not use it in a production setting. Use a production WSGI or ASGI server instead.
For more information on production servers see: https://docs.djangoproject.com/en/5.2/howto/deployment/
Traceback (most recent call last):
  File "/var/www/djangoapps/tabletap/t1/manage.py", line 20, in <module>
    main() 
    ^^^^^^
  File "/var/www/djangoapps/tabletap/t1/manage.py", line 16, in main
    execute_from_command_line(sys.argv)
  File "/var/www/djangoapps/tabletap/t1/venv/lib/python3.12/site-packages/django/core/management/__init__.py", line 442, in execute_from_command_line
    utility.execute()
  File "/var/www/djangoapps/tabletap/t1/venv/lib/python3.12/site-packages/django/core/management/__init__.py", line 382, in execute
    settings.INSTALLED_APPS
  File "/var/www/djangoapps/tabletap/t1/venv/lib/python3.12/site-packages/django/conf/__init__.py", line 81, in __getattr__
    self._setup(name)
  File "/var/www/djangoapps/tabletap/t1/venv/lib/python3.12/site-packages/django/conf/__init__.py", line 68, in _setup
    self._wrapped = Settings(settings_module)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/var/www/djangoapps/tabletap/t1/venv/lib/python3.12/site-packages/django/conf/__init__.py", line 166, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 991, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1129, in get_code
  File "<frozen importlib._bootstrap_external>", line 1059, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/var/www/djangoapps/tabletap/t1/tabletap/settings.py", line 101
    STATIC_ROOT = /home/s4933935/www/djangoapps/tabletap/t1/staticfiles
                  ^
SyntaxError: invalid syntax
